--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "openai": "^5.5.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-router-dom": "^7.6.2",
     "zustand": "^5.0.5"
   },
   "devDependencies": {
