--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.2",
     "zustand": "^5.0.5",
-    "tippy.js": "^6.3.7"
+    "tippy.js": "^6.3.7",
+    "docx": "^8.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
