--- a/package.json
+++ b/package.json
@@ -15,40 +15,41 @@
     "@headlessui/react": "^2.2.4",
     "@heroicons/react": "^2.2.0",
     "@supabase/supabase-js": "^2.50.0",
+    "@tiptap/extension-placeholder": "^2.14.0",
     "@tiptap/extension-underline": "^2.14.0",
     "@tiptap/pm": "^2.14.0",
     "@tiptap/react": "^2.14.0",
     "@tiptap/starter-kit": "^2.14.0",
-    "@tiptap/extension-placeholder": "^2.14.0",
+    "axios": "^1.10.0",
     "cors": "^2.8.5",
+    "docx": "^8.0.3",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "openai": "^5.5.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.2",
-    "zustand": "^5.0.5",
     "tippy.js": "^6.3.7",
-    "docx": "^8.0.3"
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
+    "@vercel/node": "^5.2.2",
     "@vitejs/plugin-react": "^4.4.1",
     "autoprefixer": "^10.4.21",
+    "concurrently": "^8.2.2",
     "daisyui": "^5.0.43",
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
+    "nodemon": "^3.1.0",
     "postcss": "8.4.38",
     "tailwindcss": "^3.4.3",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
-    "vite": "^6.3.5",
-    "concurrently": "^8.2.2",
-    "nodemon": "^3.1.0",
-    "@vercel/node": "^5.2.2"
+    "vite": "^6.3.5"
   }
 }
